# src/routes/studentRoutes.ts
@@ -4,13 +4,14 @@ import {
   handelGetGrade,
   handelGetGrades
 } from "../controllers/studentController";
+import onlyStudent from "../middleware/onlyStudent";
 
 // import verifyUser from "../middleware/verifyUser";
 
 const studentRouter = Router();
 
 studentRouter.post("/",handelRegister );//create user
-studentRouter.get("/", handelGetGrades);//get grades
-studentRouter.get("/:id", handelGetGrade);//get grade
+studentRouter.get("/",onlyStudent, handelGetGrades);//get grades
+studentRouter.get("/:id",onlyStudent, handelGetGrade);//get grade
 
 export default studentRouter;
